unpackaged/main/default/objects/Commission_Plan__c/Commission_Plan__c.object-meta.xml
<CustomObject>
    <label>Commission Plan</label>
    <nameField>
        <label>Commission Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>