unpackaged/main/default/objects/Commission_Plan__c/fields/Base_6kW__c.field-meta.xml
<CustomField>
    <fullName>Base_6kW__c</fullName>
    <label>Base (&gt;6kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>