unpackaged/main/default/objects/Commission_Plan__c/fields/Canvass_Appointment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Appointment_Rate__c</fullName>
    <label>Canvass Appointment Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>