unpackaged/main/default/objects/Commission_Plan__c/fields/Canvass_Rep__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Rep__c</fullName>
    <formula>TEXT(Opportunity__r.Canvass_Rep__c)</formula>
    <label>Canvass Rep</label>
    <type>Text</type>
</CustomField>