unpackaged/main/default/objects/Commission_Plan__c/fields/Channel_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Plans</relationshipLabel>
    <relationshipName>Commission_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>