unpackaged/main/default/objects/Commission_Plan__c/fields/CommPlan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CommPlan_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>