unpackaged/main/default/objects/Commission_Plan__c/fields/CommPlan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CommPlan_Start_Date__c</fullName>
    <description>Date MSA Signed (Commission Plan Start Date)</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>