unpackaged/main/default/objects/Commission_Plan__c/fields/CPlan_Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>CPlan_Base_Fee__c</fullName>
    <description>Base Fulfillment Pricing</description>
    <label>Base Fee $/w</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>