unpackaged/main/default/objects/Commission_Plan__c/fields/CPlan_CorrMetal_Adder__c.field-meta.xml
<CustomField>
    <fullName>CPlan_CorrMetal_Adder__c</fullName>
    <defaultValue>0.10</defaultValue>
    <description>Corrugated Metal Roof Adder (Price/Watt)</description>
    <inlineHelpText>Corrugated Metal Roof Adder (Price/Watt)</inlineHelpText>
    <label>Corrugated Metal Adder $/w</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>