unpackaged/main/default/objects/Commission_Plan__c/fields/CPlan_Flat_Roof_Adder__c.field-meta.xml
<CustomField>
    <fullName>CPlan_Flat_Roof_Adder__c</fullName>
    <defaultValue>0.10</defaultValue>
    <description>Flat Roof Adder (Price/Watt)</description>
    <inlineHelpText>Flat Roof Adder (Price/Watt)</inlineHelpText>
    <label>Flat Roof Adder $/w</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>