unpackaged/main/default/objects/Commission_Plan__c/fields/CPlan_High_Roof_Adder__c.field-meta.xml
<CustomField>
    <fullName>CPlan_High_Roof_Adder__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>High Roof Adder (3 stories or higher) (Price/Watt)</description>
    <inlineHelpText>High Roof Adder (3 stories or higher) (Price/Watt)</inlineHelpText>
    <label>High Roof Adder $/w</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>