unpackaged/main/default/objects/Commission_Plan__c/fields/CPlan_Steep_Roof_Adder__c.field-meta.xml
<CustomField>
    <fullName>CPlan_Steep_Roof_Adder__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>Steep Roof Adder (37 degree, 9/12 pitch) (Price/Watt)</description>
    <inlineHelpText>Steep Roof Adder (37 degree, 9/12 pitch) (Price/Watt)</inlineHelpText>
    <label>Steep Roof Adder $/w</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>