unpackaged/main/default/objects/Commission_Plan__c/fields/Dealer_Fee_Price_Match_Active__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Price_Match_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Fee Price Match Active</label>
    <type>Checkbox</type>
</CustomField>