unpackaged/main/default/objects/Commission_Plan__c/fields/Energy_Specialist_Self_Gen__c.field-meta.xml
<CustomField>
    <fullName>Energy_Specialist_Self_Gen__c</fullName>
    <label>Energy Specialist: Self-Gen</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>