unpackaged/main/default/objects/Commission_Plan__c/fields/Milestone_1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Milestone_1_Percent__c</fullName>
    <label>Milestone 1 %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>