unpackaged/main/default/objects/Commission_Plan__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Plan_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canvasser</fullName>
            </value>
            <value>
                <fullName>Canvasser Closer</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Energy Specialist</fullName>
            </value>
            <value>
                <fullName>Independent Alchemist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>