unpackaged/main/default/objects/Commission_Plan__c/fields/X3rd_Party_Partner__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Partner__c</fullName>
    <label>3rd Party Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10x Solutions, LLC</fullName>
            </value>
            <value>
                <fullName>10x Solutions LLC</fullName>
            </value>
            <value>
                <fullName>180 South Solar</fullName>
            </value>
            <value>
                <fullName>1nnov8tivellc</fullName>
            </value>
            <value>
                <fullName>1UP Solar</fullName>
            </value>
            <value>
                <fullName>360 Total Solutions LLC</fullName>
            </value>
            <value>
                <fullName>Absolute Sustainability LLC</fullName>
            </value>
            <value>
                <fullName>Accept Solar</fullName>
            </value>
            <value>
                <fullName>Ace Solar and Roofing</fullName>
            </value>
            <value>
                <fullName>Activation Department</fullName>
            </value>
            <value>
                <fullName>Adorno Consulting LLC</fullName>
            </value>
            <value>
                <fullName>Advanced Exteriors, LLC</fullName>
            </value>
            <value>
                <fullName>Alectrona Solar LLC</fullName>
            </value>
            <value>
                <fullName>Alliance Service Professionals LLC</fullName>
            </value>
            <value>
                <fullName>Alpha Solar</fullName>
            </value>
            <value>
                <fullName>Alpha Sol LLC</fullName>
            </value>
            <value>
                <fullName>Altezza Solar LLC</fullName>
            </value>
            <value>
                <fullName>Anders Jacobson LLC dba Zero Energy</fullName>
            </value>
            <value>
                <fullName>Antares Energy Solutions</fullName>
            </value>
            <value>
                <fullName>A Plus Business Solutions</fullName>
            </value>
            <value>
                <fullName>Aten Concepts</fullName>
            </value>
            <value>
                <fullName>Aten Concepts Inc</fullName>
            </value>
            <value>
                <fullName>ATJ, LLC</fullName>
            </value>
            <value>
                <fullName>Atlas Capital</fullName>
            </value>
            <value>
                <fullName>Authentic Solar Power, LLC</fullName>
            </value>
            <value>
                <fullName>AUTOMATCH, LLC</fullName>
            </value>
            <value>
                <fullName>Avantalo Inc.</fullName>
            </value>
            <value>
                <fullName>Barry Enterprises</fullName>
            </value>
            <value>
                <fullName>Blanton Group</fullName>
            </value>
            <value>
                <fullName>Booth Enterprises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>