unpackaged/main/default/objects/Commission_Plan__c/fields/X5K__c.field-meta.xml
<CustomField>
    <fullName>X5K__c</fullName>
    <label>&lt;5K</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>