unpackaged/main/default/objects/Commission_Plan__c/fields/X5kW__c.field-meta.xml
<CustomField>
    <fullName>X5kW__c</fullName>
    <label>&gt;5kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>