unpackaged/main/default/objects/Commission_Plan__c/fields/X6kW__c.field-meta.xml
<CustomField>
    <fullName>X6kW__c</fullName>
    <label>&lt;6kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>