unpackaged/main/default/objects/Commission_Plan__c/fields/X9kW__c.field-meta.xml
<CustomField>
    <fullName>X9kW__c</fullName>
    <label>&gt;9kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>