unpackaged/main/default/objects/Commission_Plan__c/recordTypes/Channel_Sales.recordType-meta.xml
<RecordType>
    <fullName>Channel_Sales</fullName>
    <active>true</active>
    <label>Channel Sales</label>
</RecordType>