unpackaged/main/default/objects/Commission_Plan__c/recordTypes/Direct_Sales.recordType-meta.xml
<RecordType>
    <fullName>Direct_Sales</fullName>
    <active>true</active>
    <label>Direct Sales</label>
</RecordType>