unpackaged/main/default/objects/Commission_Plan__c/recordTypes/Independent_Alchemists.recordType-meta.xml
<RecordType>
    <fullName>Independent_Alchemists</fullName>
    <active>true</active>
    <label>Independent Alchemists</label>
</RecordType>