unpackaged/main/default/objects/Commission_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Milestone_1_Percent__c</columns>
    <columns>Milestone_2_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>