unpackaged/main/default/objects/Commission_Plan__c/listViews/Canvassers_Commission_Plans.listView-meta.xml
<ListView>
    <fullName>Canvassers_Commission_Plans</fullName>
    <columns>NAME</columns>
    <columns>Canvass_Appointment_Rate__c</columns>
    <columns>Canvass_Install_Complete_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan__c</field>
        <operation>equals</operation>
        <value>Canvasser</value>
    </filters>
    <label>Canvassers Commission Plans</label>
</ListView>